--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,6 +114,15 @@
     <string name="btn_lbl_checkout">Checkout</string>
     <string name="action_cart">My Cart</string>
     <string name="lbl_out_of_stock">OUT OF STOCK</string>
+    <string name="msg_for_available_stock">Available stock is %1$s!.You can not add more than stock quantity.</string>
     <string name="msg_item_removed_successfully">Item removed successfully.</string>
     <!--END-->
+
+    <!--strings for add address layout-->
+    <!--START-->
+    <string name="title_address_list">ADDRESS LIST</string>
+    <string name="no_address_found">No Address Found!</string>
+    <string name="lbL_add_address">Add Address</string>
+    <!--END-->
+
 </resources>
