--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,11 +142,25 @@
     <string name="err_msg_please_enter_zip_code">Please enter zip-code.</string>
     <string name="err_msg_please_enter_other_details">Please enter other details.</string>
     <string name="msg_your_address_added_successfully">Address added successfully</string>
-    <string name="msg_your_address_updated_successfully">Your address is updated successfully</string>
+    <string name="msg_your_address_updated_successfully">Your address is updated successfully.</string>
+    <string name="msg_your_address_deleted_successfully">Your address is deleted successfully.</string>
+
     <string name="title_edit_address">EDIT ADDRESS</string>
     <string name="btn_lbl_update">UPDATE</string>
+    <string name="title_select_address">Select Address</string>
 
 
     <!--END-->
+    <!--strings of checkout activity-->
+    <!--START-->
+    <string name="title_checkout">CHECKOUT</string>
+    <string name="checkout_lbl_product_items">Product Items</string>
+    <string name="checkout_lbl_selected_address">Selected Address</string>
+    <string name="checkout_lbl_items_receipt">Items Receipt</string>
+    <string name="lbl_payment_mode">Payment Mode</string>
+    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
+    <string name="btn_lbl_place_order">PLACE ORDER</string>
+    <string name="msg_order_placed_success">Order placed successfully</string>
 
+    <!--END-->
 </resources>
