--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,4 +163,23 @@
     <string name="msg_order_placed_success">Order placed successfully</string>
 
     <!--END-->
+    <string name="msg_nothing_to_display">Nothing to display!.</string>
+    <!--strings of orders activity-->
+    <!--START-->
+    <string name="title_my_order_details">MY ORDER DETAILS</string>
+    <string name="order_details_lbl">Order Details</string>
+    <string name="order_details_lbl_order_id">Order ID</string>
+    <string name="order_details_lbl_order_date">Order Date</string>
+    <string name="order_details_lbl_order_status">Order Status</string>
+    <string name="order_status_pending">Pending</string>
+    <string name="order_details_lbl_shipping_address">Shipping Address</string>
+    <string name="order_status_delivered">Delivered</string>
+    <string name="order_status_in_process">In Process</string>
+
+    <!--END-->
+    <!--START-->
+    <string name="title_sold_products">Sold Products</string>
+    <string name="no_products_sold_yet">No products sold yet!</string>
+    <!--END-->
+    <string name="title_sold_product_details">SOLD PRODUCT DETAILS</string>
 </resources>
